<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nng_ros2</name>
    <version>1.0.0</version>
    <description>ROS 2 package for nng subscriber</description>
    <maintainer email="ymgao@zju.edu.cn">Qiayuan Liao</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>nng</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>Eigen3</depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
